feat: 종목 엔티티 클래스 수정
- 불필요한 생성자 매개변수 수정
- 배당금의 paymentDate 캡슐화
- map 연산시 캐스팅 메서드 참조로 변경